# OrderBot

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  __main__.py  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
src/: __main__.py
src/db/: config.py  database.py
src/db/migrations/: env.py
src/db/migrations/versions/: bb822ff389d6_create_tables.py
src/db/models/: __init__.py  accounts_data.py  client.py  dates.py
src/db/queries/: orm.py
src/handlers/: __init__.py  admin.py  basic.py  client.py
src/keyboards/: admin.py  basic.py  basic_kb.py  client.py
src/keyboards/admin_kb/: admin.py
src/keyboards/client_kb/: client.py
src/routers/: __init__.py  admin.py  basic.py  client.py
src/routers/admin_logic/: admin.py
src/routers/client_logic/: client.py
src/routers/client_logic/commands/: help.py  start.py
src/routers/client_logic/fsm/: date_states.py  order_states.py
src/utils/: database.py
